--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "antd": "^5.24.4",
     "axios": "^1.8.4",
+    "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -29,6 +31,6 @@
     "prettier": "^3.5.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.4"
+    "vite": "6.2.5"
   }
 }
