--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,8 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 SALT_ROUNDS=10
 FE_ADDRESS=
+DOTPAY_MERCHANT_ID=
+DOTPAY_SECRET=
+DOTPAY_TEST_MODE=
+DOTPAY_RETURN_URL=
+DOTPAY_CALLBACK_URL=
