--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=factory-app
+sonar.organization=mpawelkiewiczpsk
 sonar.sources=src
 sonar.tests=src
 sonar.test.inclusions=**/*.{test,spec}.{js,jsx,ts,tsx}
